git subrepo clone --force git://github.com/skids/perl6sum.git skids/perl6sum
subrepo:
  subdir:   "skids/perl6sum"
  merged:   "702bd26"
upstream:
  origin:   "git://github.com/skids/perl6sum.git"
  branch:   "master"
  commit:   "702bd26"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/skids/perl6sum/META6.yaml
+++ b/skids/perl6sum/META6.yaml
@@ -18,6 +18,7 @@ provides:
   Sum::MDPad: lib/Sum/MDPad.pm6
   Sum::SHA: lib/Sum/SHA.pm6
   Sum::SipHash: lib/Sum/SipHash.pm6
+  Sum::SM3: lib/Sum/SM3.pm6
   Sum::Tiger: lib/Sum/Tiger.pm6
   Sum::libmhash: lib/Sum/libmhash.pm6
   Sum::librhash: lib/Sum/librhash.pm6
