git subrepo clone --force git://github.com/ugexe/P6TCI.git ugexe/P6TCI
subrepo:
  subdir:   "ugexe/P6TCI"
  merged:   "7cd14ef"
upstream:
  origin:   "git://github.com/ugexe/P6TCI.git"
  branch:   "master"
  commit:   "7cd14ef"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/ugexe/P6TCI/.travis.yml
+++ b/ugexe/P6TCI/.travis.yml
@@ -4,28 +4,28 @@ perl:
 env:
     - BACKEND=moar
     - BACKEND=jvm
-    - BACKEND=parrot
 matrix:
     allow_failures:
         - env: BACKEND=jvm
-        - env: BACKEND=parrot
     fast_finish: true
 before_install:
-    # parrot requires ICU
-    - 'if [ "$BACKEND" == "parrot" ]; then sudo apt-get update -qq; fi;'
-    - 'if [ "$BACKEND" == "parrot" ]; then sudo apt-get install -qq libicu48 libicu-dev; fi;'
-    - git config --global user.name "TravisCI"
     - git config --global user.email $HOSTNAME":not-for-mail@travis-ci.org"
+    # helpers $(test-jobs) and $(test-files)
+    - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
+    - source ~/travis-perl-helpers/init
     - git clone https://github.com/tadzik/rakudobrew ~/.rakudobrew
     - export PATH=~/.rakudobrew/bin:$PATH
     - rakudobrew build $BACKEND
     - perl6 -v
+install:
+    # must do *something* in the install phase
     - rakudobrew build-panda
 before_script:
     - panda list --installed --verbose # modules installed before panda-install
 script:
     # tests that module passes tests *before* compile
-    - PANDA_SUBMIT_TESTREPORTS=yes panda install .
+    - prove -v -s -j$(test-jobs) -e "perl6 --ll-exception -Ilib" $(test-files)
+    # runs tests again, but catches some heisenbugs (mostly with precompiled modules)
+    - PANDA_SUBMIT_TESTREPORTS=1 panda install .
 after_success:
-    # modules installed before panda-install
     - panda list --installed --verbose
