git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "4903f5c"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "4903f5c"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/Makefile
+++ b/perl6/doc/Makefile
@@ -1,4 +1,4 @@
-.PHONY: html html-nohighlight test
+.PHONY: html html-nohighlight test help
 
 html:
 	perl6 htmlify.p6
@@ -8,3 +8,11 @@ html-nohighlight:
 
 test:
 	prove --exec perl6 -r t
+
+help:
+	@echo "Usage: make [html|html-nohighlight|test]"
+	@echo ""
+	@echo "Options:"
+	@echo "   html:             generate the HTML documentation"
+	@echo "   html-nohighlight: generate HTML documentation without syntax highlighting"
+	@echo "   test:             run the test suite"
