--- a/ugexe/P6TCI/.travis.yml
+++ b/ugexe/P6TCI/.travis.yml
@@ -20,6 +20,8 @@ install:
     # must do *something* in the install phase
     - rakudobrew build-panda
 script:
+    # Pull in the dependencies before running tests
+    - panda installdeps .
     # tests that module passes tests *before* compile
     - prove -v -s -j$(test-jobs) -e "perl6 --ll-exception -Ilib" $(test-files)
     # runs tests again, but catches some heisenbugs (mostly with precompiled modules)
