git subrepo clone --force git://github.com/Tux/CSV.git Tux/CSV
subrepo:
  subdir:   "Tux/CSV"
  merged:   "440e816"
upstream:
  origin:   "git://github.com/Tux/CSV.git"
  branch:   "master"
  commit:   "440e816"
git-subrepo:
  version:  "0.2.1"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b136967"

--- a/Tux/CSV/Makefile
+++ b/Tux/CSV/Makefile
@@ -6,6 +6,7 @@
 test:
 	@perl bugs.pl -s
 	podchecker Text-CSV.pod 2>&1 | grep -v WARNING:
+	pod-spell-check --aspell --ispell Text-CSV.pod
 	prove -j4 -e 'perl6 -I. -Ilib' t
 
 test-verbose:	Text/CSV.pm
