--- a/ugexe/Perl6-Text--Table--Simple/.travis.yml
+++ b/ugexe/Perl6-Text--Table--Simple/.travis.yml
@@ -2,33 +2,20 @@ language: perl
 perl:
     - '5.20'
 env:
-    - BACKEND=moar PANDA_SUBMIT_TESTREPORTS=yes
-    - BACKEND=jvm PANDA_SUBMIT_TESTREPORTS=yes
-    - BACKEND=parrot
+    - BACKEND=moar
+    - BACKEND=jvm
 matrix:
     allow_failures:
         - env: BACKEND=jvm
-        - env: BACKEND=parrot
     fast_finish: true
 before_install:
     - git config --global user.name "TravisCI"
     - git config --global user.email $HOSTNAME":not-for-mail@travis-ci.org"
-    - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
-    - source ~/travis-perl-helpers/init # helpers for parallel testing/testing dirs
     - git clone https://github.com/tadzik/rakudobrew ~/.rakudobrew
     - export PATH=~/.rakudobrew/bin:$PATH
     - rakudobrew build $BACKEND
-    - perl6 -v
-    - rakudobrew build-panda
 install:
-    - panda-fetch .
-    - panda-build
-before_script:
-    - panda list --installed --verbose # modules installed before panda-install
+    # need at least 1 statement in 'install'
+    - perl6 -v
 script:
-    - prove -v -s -j$(test-jobs) -e "perl6 --ll-exception -Ilib" $(test-files)
-    - panda-test
-    - panda install . # 'panda install' required to send test reports
-after_success:
-    - panda list --installed --verbose # modules installed after panda-install
-#   do coveralls.io testing?
+    - prove -v -e "perl6 -Ilib" t/
