git subrepo clone --force git://github.com/Tux/CSV.git Tux/CSV
subrepo:
  subdir:   "Tux/CSV"
  merged:   "a5f907f"
upstream:
  origin:   "git://github.com/Tux/CSV.git"
  branch:   "master"
  commit:   "a5f907f"
git-subrepo:
  version:  "0.2.1"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b136967"

--- a/Tux/CSV/Makefile
+++ b/Tux/CSV/Makefile
@@ -17,17 +17,24 @@ test-verbose:	Text/CSV.pm
 	perl6 -Ilib t/20_file.t
 	perl6 -Ilib t/21_combine.t
 	perl6 -Ilib t/22_print.t
+	perl6 -Ilib t/30_field.t
+	perl6 -Ilib t/31_row.t
+	perl6 -Ilib t/32_getline.t
 	perl6 -Ilib t/40_misc.t
 	perl6 -Ilib t/41_null.t
 	perl6 -Ilib t/50_utf8.t
 	perl6 -Ilib t/55_combi.t
 	perl6 -Ilib t/60_samples.t
 	perl6 -Ilib t/65_allow.t
+	perl6 -Ilib t/75_hashref.t
 	perl6 -Ilib t/77_getall.t
 	perl6 -Ilib t/78_fragment.t
 	perl6 -Ilib t/79_callbacks.t
+	perl6 -Ilib t/80_diag.t
 	perl6 -Ilib t/81_subclass.t
 	perl6 -Ilib t/82_subclass.t
+	perl6 -Ilib t/90_csv.t
+	perl6 -Ilib t/91_csv_cb.t
 
 profile:
 	perl6 -Ilib --profile test-t.pl < /tmp/hello.csv
