git subrepo clone --force git://github.com/zostay/Template-Anti.git zostay/Template-Anti
subrepo:
  subdir:   "zostay/Template-Anti"
  merged:   "1f9a5f0"
upstream:
  origin:   "git://github.com/zostay/Template-Anti.git"
  branch:   "master"
  commit:   "1f9a5f0"
git-subrepo:
  version:  "0.2.1"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b136967"

--- a/zostay/Template-Anti/.travis.yml
+++ b/zostay/Template-Anti/.travis.yml
@@ -20,6 +20,8 @@ install:
     # must do *something* in the install phase
     - rakudobrew build-panda
 script:
+    # wget the project.json because panda has trouble doing this itself
+    - wget http://ecosystem-api.p6c.org/projects.json -O ~/.rakudobrew/moar-nom/install/share/perl6/site/panda/projects.json
     # Pull in the dependencies before running tests
     - panda installdeps .
     # tests that module passes tests *before* compile
