git subrepo clone --force git://github.com/paultcochrane/Perl6Mongers-Hannover.git paultcochrane/Perl6Mongers-Hannover
subrepo:
  subdir:   "paultcochrane/Perl6Mongers-Hannover"
  merged:   "dc96445"
upstream:
  origin:   "git://github.com/paultcochrane/Perl6Mongers-Hannover.git"
  branch:   "master"
  commit:   "dc96445"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/paultcochrane/Perl6Mongers-Hannover/.travis.yml
+++ b/paultcochrane/Perl6Mongers-Hannover/.travis.yml
@@ -1,14 +1,10 @@
-language: perl
+language: perl6
 
-perl:
-    - "5.10"
-
-env:
-    PATH=~/.rakudobrew/bin:$PATH
+perl6:
+    - 2015.06
+    - 2015.05
 
 install:
-    - git clone https://github.com/tadzik/rakudobrew ~/.rakudobrew
-    - rakudobrew build moar
     - rakudobrew build-panda
     - panda install IO::Capture::Simple
 
