--- a/supernovus/perl6-http-easy/.travis.yml
+++ b/supernovus/perl6-http-easy/.travis.yml
@@ -1,9 +1,7 @@
 language: perl6
 perl6:
     - latest
-    - 2015.06
-    - 2015.05
 
 install:
     - rakudobrew build-panda
-    - panda install HTTP::Status
+    - panda update && panda install HTTP::Status
