git subrepo clone --force git://github.com/azawawi/perl6-atom-electron.git azawawi/perl6-atom-electron
subrepo:
  subdir:   "azawawi/perl6-atom-electron"
  merged:   "ca69660"
upstream:
  origin:   "git://github.com/azawawi/perl6-atom-electron.git"
  branch:   "master"
  commit:   "ca69660"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/azawawi/perl6-atom-electron/.travis.yml
+++ b/azawawi/perl6-atom-electron/.travis.yml
@@ -1,9 +1,7 @@
 language: perl6
 perl6:
     - latest
-    - 2015.06
-    - 2015.05
 
 install:
     - rakudobrew build-panda
-    - panda install JSON::RPC
+    - panda update && panda install File::Which JSON::RPC
