git subrepo clone --force git://github.com/ugexe/zef.git ugexe/zef
subrepo:
  subdir:   "ugexe/zef"
  merged:   "bd67d85"
upstream:
  origin:   "git://github.com/ugexe/zef.git"
  branch:   "master"
  commit:   "bd67d85"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/ugexe/zef/.travis.yml
+++ b/ugexe/zef/.travis.yml
@@ -5,10 +5,13 @@ env:
     - BACKEND=moar ASYNC=""
     - BACKEND=moar ASYNC="--async"
     - BACKEND=jvm  ASYNC=""
+    - BACKEND="moar glr" ASYNC=""
+    - BACKEND="moar glr" ASYNC="--async"
 matrix:
     allow_failures:
         - env: BACKEND=jvm  ASYNC=""
         - env: BACKEND=moar ASYNC="--async"
+        - env: BACKEND="moar glr" ASYNC="--async"
     fast_finish: true
 sudo: false
 before_install:
@@ -19,7 +22,12 @@ install:
     # need at least 1 statement in 'install'
     - perl6 -v
 script:
-    - prove -j4 -v -e "perl6 -Ilib" t/
+    - prove -j4 -v -e "perl6 -Ilib" t/ xt/
 after_success:
+    # test running with precompiled code
+
     - 'if [[ $BACKEND == "moar" ]]; then perl6 -Ilib bin/zef -v --boring $ASYNC --save-to=precomp/ build; fi'
     - 'if [[ $BACKEND == "moar" ]]; then perl6 -Iprecomp bin/zef -v --boring --lib=precomp $ASYNC install Zef; fi'
+
+    - 'if [[ $BACKEND == "moar glr" ]]; then perl6 -Ilib bin/zef -v --boring $ASYNC --save-to=precomp/ build; fi'
+    - 'if [[ $BACKEND == "moar glr" ]]; then perl6 -Iprecomp bin/zef -v --boring --lib=precomp $ASYNC install Zef; fi'
