git subrepo clone --force git://github.com/ugexe/Perl6-Text--Table--Simple.git ugexe/Perl6-Text--Table--Simple
subrepo:
  subdir:   "ugexe/Perl6-Text--Table--Simple"
  merged:   "2db94d7"
upstream:
  origin:   "git://github.com/ugexe/Perl6-Text--Table--Simple.git"
  branch:   "master"
  commit:   "2db94d7"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/ugexe/Perl6-Text--Table--Simple/.travis.yml
+++ b/ugexe/Perl6-Text--Table--Simple/.travis.yml
@@ -8,12 +8,15 @@ matrix:
     allow_failures:
         - env: BACKEND=jvm
     fast_finish: true
+sudo: false
 before_install:
-    - git config --global user.name "TravisCI"
-    - git config --global user.email $HOSTNAME":not-for-mail@travis-ci.org"
-    - git clone https://github.com/tadzik/rakudobrew ~/.rakudobrew
-    - export PATH=~/.rakudobrew/bin:$PATH
-    - rakudobrew build $BACKEND
+    - git clone https://github.com/rakudo/rakudo.git $HOME/rakudo
+    - cd $HOME/rakudo
+    - 'if [[ $BACKEND == "moar" ]]; then perl Configure.pl --gen-moar --gen-nqp --backends=$BACKEND; fi'
+    - 'if [[ $BACKEND == "jvm" ]]; then perl Configure.pl --gen-nqp --backends=$BACKEND; fi'
+    - make install
+    - export PATH=$HOME/rakudo/install/bin:$PATH
+    - cd $TRAVIS_BUILD_DIR
 install:
     # need at least 1 statement in 'install'
     - perl6 -v
