--- a/Tux/CSV/.travis.yml
+++ b/Tux/CSV/.travis.yml
@@ -17,6 +17,8 @@ before_install:
 install:
     - export PATH=~/.rakudobrew/bin:~/.rakudobrew/moar-nom/install/share/perl6/site/bin:~/.rakudobrew/moar-nom/panda/bin:$PATH
     - panda --notests install . # installs deps
+before_script:
+    - panda --installed --verbose list
 script:
     - prove -v -e 'perl6 -Ilib' t
 notifications:
