git subrepo clone --force git://github.com/shoichikaji/mi6.git shoichikaji/mi6
subrepo:
  subdir:   "shoichikaji/mi6"
  merged:   "9a6dbff"
upstream:
  origin:   "git://github.com/shoichikaji/mi6.git"
  branch:   "master"
  commit:   "9a6dbff"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/shoichikaji/mi6/.travis.yml
+++ b/shoichikaji/mi6/.travis.yml
@@ -4,7 +4,6 @@ perl6:
 install:
   - rakudobrew build-panda
   - panda --notests installdeps .
-  - panda --notests install JSON::Fast
 script:
-  - PERL6LIB=$PWD/lib prove -e perl6 -r t/
+  - PERL6LIB=$PWD/lib prove -e perl6 -r t/ xt/
 sudo: false
