git subrepo clone --force git://github.com/supernovus/perl6-http-easy.git supernovus/perl6-http-easy
subrepo:
  subdir:   "supernovus/perl6-http-easy"
  merged:   "290c5b6"
upstream:
  origin:   "git://github.com/supernovus/perl6-http-easy.git"
  branch:   "master"
  commit:   "290c5b6"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/supernovus/perl6-http-easy/.travis.yml
+++ b/supernovus/perl6-http-easy/.travis.yml
@@ -1,7 +1,10 @@
 language: perl6
 perl6:
     - latest
-
 install:
     - rakudobrew build-panda
-    - panda update && panda install HTTP::Status
+    - panda update && panda install HTTP::Status PSGI
+script:
+    - perl6 -MPanda::Builder -e 'Panda::Builder.build($*CWD)'
+    - PERL6LIB=$PWD/blib/lib prove -e perl6 -r t/
+sudo: false
