git subrepo clone --force git://github.com/MARTIMM/BSON.git MARTIMM/BSON
subrepo:
  subdir:   "MARTIMM/BSON"
  merged:   "2fc7875"
upstream:
  origin:   "git://github.com/MARTIMM/BSON.git"
  branch:   "master"
  commit:   "2fc7875"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/MARTIMM/BSON/.travis.yml
+++ b/MARTIMM/BSON/.travis.yml
@@ -10,7 +10,10 @@ perl6:
 install:
   - rakudobrew build-panda ${TRAVIS_PERL6_VERSION#latest}
   - panda installdeps .
-  - panda update
-  - panda install Digest::MD5 UUID
+#  - panda update
+#  - panda install Digest::MD5 UUID
 
+cache:
+  directories:
+    - $TRAVIS_BUILD_DIR/.rakudobrew
 
