--- a/MARTIMM/mongo-perl6-driver/.travis.yml
+++ b/MARTIMM/mongo-perl6-driver/.travis.yml
@@ -7,12 +7,28 @@ language: perl6
 perl6:
   - latest
 
+# Install mongodb server at ./Travis-ci/MongoDB
+#
+before_install:
+  - sh $TRAVIS_BUILD_DIR/Travis-ci/install-mongodb.sh 3.0.5
+
+#env:
+#  - PATH=.:$TRAVIS_BUILD_DIR/Travis-ci/MongoDB:$PATH
+
 install:
   - rakudobrew build-panda ${TRAVIS_PERL6_VERSION#latest}
   - panda installdeps .
-  - panda update
-  - panda install BSON Digest::MD5
+#  - panda update
+#  - panda install BSON Digest::MD5
 
-services:
-  - mongodb
+cache:
+  directories:
+    - $TRAVIS_BUILD_DIR/Travis-ci
+
+# Cannot use the mongod service because the version is too low (2.4.12)
+#
+#services:
+#  - mongodb
+
+
 
