git subrepo clone --force git://github.com/sergot/http-useragent.git sergot/http-useragent
subrepo:
  subdir:   "sergot/http-useragent"
  merged:   "db12405"
upstream:
  origin:   "git://github.com/sergot/http-useragent.git"
  branch:   "master"
  commit:   "db12405"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/sergot/http-useragent/.travis.yml
+++ b/sergot/http-useragent/.travis.yml
@@ -3,7 +3,7 @@ perl6:
   - latest
 install:
   - rakudobrew build-panda
-  - panda --notests installdeps .
+  - panda installdeps .
   - panda --notests install IO::Socket::SSL
 script:
   - perl6 -MPanda::Builder -e 'Panda::Builder.build($*CWD)'
