--- a/sergot/perl6-encode/.travis.yml
+++ b/sergot/perl6-encode/.travis.yml
@@ -1,3 +1,10 @@
+sudo: false
 language: perl6
 perl6:
-    - latest
+  - latest
+install:
+  - rakudobrew build-panda
+  - panda --notests installdeps .
+script:
+  - perl6 -MPanda::Builder -e 'Panda::Builder.build($*CWD)'
+  - PERL6LIB=$PWD/blib/lib prove -e perl6 -vr t/
