git subrepo clone --force git://github.com/cygx/p6-uni63.git cygx/p6-uni63
subrepo:
  subdir:   "cygx/p6-uni63"
  merged:   "1c4aef7"
upstream:
  origin:   "git://github.com/cygx/p6-uni63.git"
  branch:   "master"
  commit:   "1c4aef7"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/cygx/p6-uni63/.travis.yml
+++ b/cygx/p6-uni63/.travis.yml
@@ -1,3 +1,5 @@
+notifications:
+  email: false
 branches:
   except:
     - gh-pages
@@ -5,6 +7,9 @@ language: perl6
 sudo: false
 perl6:
   - latest
-#install:
-#  - rakudobrew build-panda
-#  - panda installdeps .
+install:
+  - cd ~/build
+  - rakudobrew build-panda
+  - panda install cygx/p6-uni63
+script:
+  - perl6 -MUni63 -e 'say Uni63::enc("All is well, 先生!")'
