git subrepo clone --force git://github.com/supernovus/perl6-http-easy.git supernovus/perl6-http-easy
subrepo:
  subdir:   "supernovus/perl6-http-easy"
  merged:   "f495f96"
upstream:
  origin:   "git://github.com/supernovus/perl6-http-easy.git"
  branch:   "master"
  commit:   "f495f96"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/supernovus/perl6-http-easy/.travis.yml
+++ b/supernovus/perl6-http-easy/.travis.yml
@@ -3,7 +3,7 @@ perl6:
     - latest
 install:
     - rakudobrew build-panda
-    - panda update && panda install HTTP::Status PSGI
+    - panda installdeps .
 script:
     - perl6 -MPanda::Builder -e 'Panda::Builder.build($*CWD)'
     - PERL6LIB=$PWD/blib/lib prove -e perl6 -r t/
