git subrepo clone --force git://github.com/Takadonet/Algorithm--Diff.git Takadonet/Algorithm--Diff
subrepo:
  subdir:   "Takadonet/Algorithm--Diff"
  merged:   "ccd948d"
upstream:
  origin:   "git://github.com/Takadonet/Algorithm--Diff.git"
  branch:   "master"
  commit:   "ccd948d"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/Takadonet/Algorithm--Diff/.travis.yml
+++ b/Takadonet/Algorithm--Diff/.travis.yml
@@ -5,5 +5,5 @@ install:
   - rakudobrew build-panda
   - panda --notests installdeps .
 script:
-  - PERL6LIB=$PWD/lib prove -e perl6 -r t/ xt/
+  - PERL6LIB=$PWD/lib prove -e perl6 -r t/
 sudo: false
