git subrepo clone --force git://github.com/Tux/CSV.git Tux/CSV
subrepo:
  subdir:   "Tux/CSV"
  merged:   "d68612b"
upstream:
  origin:   "git://github.com/Tux/CSV.git"
  branch:   "master"
  commit:   "d68612b"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/Tux/CSV/.travis.yml
+++ b/Tux/CSV/.travis.yml
@@ -18,7 +18,8 @@ install:
     - export PATH=~/.rakudobrew/bin:~/.rakudobrew/moar-nom/install/share/perl6/site/bin:~/.rakudobrew/moar-nom/panda/bin:$PATH
     - panda --notests install . # installs deps
 before_script:
-    - panda --installed --verbose list
+    - panda --installed --verbose list  || true
+    - perl6 -I. -Ilib t/81_subclass.t   || true
 script:
     - prove -v -e 'perl6 -Ilib' t
 notifications:
