git subrepo clone --force git://github.com/sylvarant/Compress-Brotli.git sylvarant/Compress-Brotli
subrepo:
  subdir:   "sylvarant/Compress-Brotli"
  merged:   "91eb97b"
upstream:
  origin:   "git://github.com/sylvarant/Compress-Brotli.git"
  branch:   "master"
  commit:   "91eb97b"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/sylvarant/Compress-Brotli/.travis.yml
+++ b/sylvarant/Compress-Brotli/.travis.yml
@@ -8,6 +8,8 @@ install:
     - sudo apt-get -qq install g++-4.8
     - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
     - rakudobrew build-panda
+    - panda --notests installdeps .
+    - panda --notests installdeps .
     - panda install LibraryMake
 
 script: panda-build && prove -e perl6 t
