git subrepo clone --force git://github.com/MARTIMM/mongo-perl6-driver.git MARTIMM/mongo-perl6-driver
subrepo:
  subdir:   "MARTIMM/mongo-perl6-driver"
  merged:   "514995b"
upstream:
  origin:   "git://github.com/MARTIMM/mongo-perl6-driver.git"
  branch:   "master"
  commit:   "514995b"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/MARTIMM/mongo-perl6-driver/.gitignore
+++ b/MARTIMM/mongo-perl6-driver/.gitignore
@@ -1,6 +1,5 @@
 .directory
 *.pdf
-*/*.pdf
 *.html
 */*.html
 Old/*
@@ -9,3 +8,6 @@ Sandbox/*
 Travis-ci/M*
 Travis-ci/m*
 *.log
+.precomp
+*/.procomp
+*.zargo~
