git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "ebdd00a"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "ebdd00a"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/perl6/doc/.travis.yml
+++ b/perl6/doc/.travis.yml
@@ -1,6 +1,20 @@
+addons:
+  apt:
+    packages:
+      - graphviz
 branches:
   except:
     - gh-pages
+notifications:
+  irc:
+    channels:
+    - "irc.freenode.net#perl6"
+    on_success: change
+    on_failure: always
+    template:
+      - "Doc build %{result}. %{author} '%{commit_message}'"
+      - "%{build_url} %{compare_url}"
+
 language: perl6
 sudo: false
 perl6:
@@ -8,3 +22,6 @@ perl6:
 install:
   - rakudobrew build-panda
   - panda installdeps .
+  - panda install Pod::To::HTML
+
+script: make test && make html
