--- a/skids/perl6sum/META6.yaml
+++ b/skids/perl6sum/META6.yaml
@@ -27,5 +27,5 @@ provides:
   Sum::SM3: lib/Sum/SM3.pm6
   Sum::Tiger: lib/Sum/Tiger.pm6
 support:
-  source: git://github.com/skids/perl6sum.git
+  source: https://github.com/skids/perl6sum.git
 version: v0.1.0
