git subrepo clone --force git://github.com/azawawi/farabi6.git azawawi/farabi6
subrepo:
  subdir:   "azawawi/farabi6"
  merged:   "4e3d05d"
upstream:
  origin:   "git://github.com/azawawi/farabi6.git"
  branch:   "master"
  commit:   "4e3d05d"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/azawawi/farabi6/.travis.yml
+++ b/azawawi/farabi6/.travis.yml
@@ -1,7 +1,8 @@
 language: perl6
 perl6:
     - latest
+    - 2015.12
 
 install:
     - rakudobrew build-panda
-    - panda install File::Temp HTTP::Easy JSON::Tiny Pod::To::HTML URI p6doc Debugger::UI::CommandLine Browser::Open
+    - panda install File::Temp HTTP::Easy JSON::Tiny Pod::To::HTML p6doc Debugger::UI::CommandLine Browser::Open
