git subrepo clone --force git://github.com/shoichikaji/mi6.git shoichikaji/mi6
subrepo:
  subdir:   "shoichikaji/mi6"
  merged:   "a17d3ff"
upstream:
  origin:   "git://github.com/shoichikaji/mi6.git"
  branch:   "master"
  commit:   "a17d3ff"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/shoichikaji/mi6/.travis.yml
+++ b/shoichikaji/mi6/.travis.yml
@@ -5,5 +5,6 @@ install:
   - rakudobrew build-panda
   - panda --notests installdeps .
 script:
-  - PERL6LIB=$PWD/lib prove -e perl6 -r t/ xt/
+  - perl6 -MPanda::Builder -e 'Panda::Builder.build(~$*CWD)'
+  - PERL6LIB=$PWD/lib prove -e perl6 -vr t/
 sudo: false
