--- a/moznion/p6-IO-Blob/.travis.yml
+++ b/moznion/p6-IO-Blob/.travis.yml
@@ -5,7 +5,6 @@ install:
   - rakudobrew build-panda
   - panda --notests installdeps .
 script:
-  - perl6 -MPanda::Builder -e 'Panda::Builder.new.build($*CWD)'
-  - PERL6LIB=$PWD/blib/lib prove -e perl6 -r t/
+  - prove -e 'perl6 -Ilib' -rv t/
 sudo: false
 
