git subrepo clone --force git://github.com/tokuhirom/p6-Crust.git tokuhirom/p6-Crust
subrepo:
  subdir:   "tokuhirom/p6-Crust"
  merged:   "a37e3d0"
upstream:
  origin:   "git://github.com/tokuhirom/p6-Crust.git"
  branch:   "master"
  commit:   "a37e3d0"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/tokuhirom/p6-Crust/.travis.yml
+++ b/tokuhirom/p6-Crust/.travis.yml
@@ -5,6 +5,5 @@ install:
   - rakudobrew build-panda
   - panda --notests installdeps .
 script:
-  - perl6 -MPanda::Builder -e 'Panda::Builder.build($*CWD)'
-  - PERL6LIB=$PWD/blib/lib prove -e perl6 -r t/
+  - prove -vr -e 'perl6 -Ilib' t/
 sudo: false
