--- a/Skarsnik/perl6-gumbo/.travis.yml
+++ b/Skarsnik/perl6-gumbo/.travis.yml
@@ -15,6 +15,6 @@ install:
   - rakudobrew build-panda
   - panda --notests installdeps .
 script:
-  - perl6 -MPanda::Builder -e 'Panda::Builder.build($*CWD)'
+  - LD_LIBRARY_PATH=$HOME/gumbo-parser/lib panda install .
   - PERL6LIB=$PWD/blib/lib LD_LIBRARY_PATH=$HOME/gumbo-parser/lib prove -e perl6 -vr t/
 sudo: false
