git subrepo clone --force git://github.com/p6-pdf/perl6-PDF-Tools.git p6-pdf/perl6-PDF-Tools
subrepo:
  subdir:   "p6-pdf/perl6-PDF-Tools"
  merged:   "f2051dd"
upstream:
  origin:   "git://github.com/p6-pdf/perl6-PDF-Tools.git"
  branch:   "master"
  commit:   "f2051dd"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/p6-pdf/perl6-PDF-Tools/t/pdf/pdf-fdf.in
+++ b/p6-pdf/perl6-PDF-Tools/t/pdf/pdf-fdf.in
@@ -12,8 +12,7 @@
       >> ]
     /ID [ <7A0631678ED475F0898815F0A818CFA1> <BEF7724317B311718E8675B677EF9B4E> ]
   >>
->>
-endobj
+>> endobj
 trailer
 <<
   /Root 1 0 R
