--- a/p6-pdf/perl6-PDF-Tools/t/pdf/ind-obj-A85+LZW.in
+++ b/p6-pdf/perl6-PDF-Tools/t/pdf/ind-obj-A85+LZW.in
@@ -1,8 +1,7 @@
 1 0 obj
 << /Length 534
 /Filter [/ASCII85Decode /LZWDecode]
->>
-stream
+>> stream
 J..)6T`?p&<!J9%_[umg"B7/Z7KNXbN'S+,*Q/&"OLT'F
 LIDK#!n`$"<Atdi`\Vn%b%)&'cA*VnK\CJY(sF>c!Jnl@
 RM]WM;jjH6Gnc75idkL5]+cPZKEBPWdR>FF(kj1_R%W_d
@@ -15,5 +14,4 @@ S]hQ;Rj@!ND)bD_q&C\g:inYC%)&u#:u,M6Bm%IY!Kb1+
 al>iG1p&i;eVoK&juJHs9%;Xomop"5KatWRT"JQ#qYuL,
 JD?M$0QP)lKn06l1apKDC@\qJ4B!!(5m+j.7F790m(Vj8
 8l8Q:_CZ(Gm1%X\N1&u!FKHMB~>
-endstream
-endobj
+endstream endobj
