--- a/ugexe/zef/.travis.yml
+++ b/ugexe/zef/.travis.yml
@@ -2,12 +2,11 @@ language: perl
 perl:
     - '5.20'
 env:
-    - BACKEND=moar JOBS=""
-    - BACKEND=moar JOBS="--jobs=4"
-    - BACKEND=jvm  JOBS=""
+    - BACKEND=moar
+    - BACKEND=jvm
 matrix:
     allow_failures:
-        - env: BACKEND=jvm  JOBS=""
+        - env: BACKEND=jvm
     fast_finish: true
 sudo: false
 before_install:
@@ -22,7 +21,4 @@ install:
     # need at least 1 statement in 'install'
     - perl6 -v
 script:
-    - prove -j4 -v -e "perl6 -Ilib" t/ xt/
-after_success:
-    - perl6 -Ilib bin/zef -v --boring $JOBS --save-to=precomp/ build
-    - perl6 -Iprecomp bin/zef -v --boring --lib=precomp $JOBS install Zef
+    - perl6 -Ilib bin/zef -v install .
