--- a/Tux/CSV/.travis.yml
+++ b/Tux/CSV/.travis.yml
@@ -1,8 +1,12 @@
 language: perl
 perl:
-    - "5.18"
+    - "5.20"
 env:
     - BACKEND=moar
+    - BACKEND=jvm
+matrix:
+    allow_failures:
+        - env: BACKEND=jvm
 before_install:
     - git config --global user.name "TravisCI"
     - git config --global user.email $HOSTNAME":not-for-mail@travis-ci.org"
@@ -16,12 +20,15 @@ before_install:
     - panda install Slang::Tuxic File::Temp
 install:
     - export PATH=~/.rakudobrew/bin:~/.rakudobrew/moar-nom/install/share/perl6/site/bin:~/.rakudobrew/moar-nom/panda/bin:$PATH
-    - panda --notests install . # installs deps
+    - panda installdeps .
 before_script:
     - panda --installed --verbose list  || true
     - perl6 -I. -Ilib t/81_subclass.t   || true
 script:
     - prove -v -e 'perl6 -Ilib' t
+    - PANDA_SUBMIT_TESTREPORTS=1 panda install .
+after_success:
+    - panda list --installed --verbose
 notifications:
   irc:
     channels:
