--- a/ugexe/P6TCI/.travis.yml
+++ b/ugexe/P6TCI/.travis.yml
@@ -1,17 +1,19 @@
 language: perl
 perl:
-    - '5.20'
+    # -shrplib in case of a dependency on Inline::Perl5
+    - '5.20-shrplib'
 env:
     - BACKEND=moar
     - BACKEND=jvm
 matrix:
     allow_failures:
         - env: BACKEND=jvm
+sudo: false
 before_install:
     # helpers $(test-jobs) and $(test-files)
     - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
     - source ~/travis-perl-helpers/init
-    - git clone -b compat https://github.com/tadzik/rakudobrew ~/.rakudobrew
+    - git clone https://github.com/tadzik/rakudobrew ~/.rakudobrew
     - export PATH=~/.rakudobrew/bin:$PATH
     - rakudobrew build $BACKEND
     - perl6 -v
