--- a/tokuhirom/p6-HTTP-Parser/.travis.yml
+++ b/tokuhirom/p6-HTTP-Parser/.travis.yml
@@ -5,6 +5,5 @@ install:
   - rakudobrew build-panda
   - panda --notests installdeps .
 script:
-  - perl6 -MPanda::Builder -e 'Panda::Builder.build($*CWD)'
-  - PERL6LIB=$PWD/blib/lib prove -e perl6 -r t/
+  - prove -vr -e 'perl6 -Ilib' t/
 sudo: false
