git subrepo clone --force git://github.com/cbk/WebService-GoogleDyDNS.git cbk/WebService-GoogleDyDNS
subrepo:
  subdir:   "cbk/WebService-GoogleDyDNS"
  merged:   "ccc2638"
upstream:
  origin:   "git://github.com/cbk/WebService-GoogleDyDNS.git"
  branch:   "master"
  commit:   "ccc2638"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/cbk/WebService-GoogleDyDNS/.travis.yml
+++ b/cbk/WebService-GoogleDyDNS/.travis.yml
@@ -4,6 +4,10 @@ perl6:
 install:
   - rakudobrew build-panda
   - panda --notests installdeps .
+  - panda-build
   - panda --notests install WebService::HazIP
   - panda --notests install HTTP::UserAgent
+
+script:
+  - PERL6LIB=lib prove -e perl6 -vr t/
 sudo: false
