git subrepo clone --force git://github.com/gfldex/perl6-typesafe-xhtml-writer.git gfldex/perl6-typesafe-xhtml-writer
subrepo:
  subdir:   "gfldex/perl6-typesafe-xhtml-writer"
  merged:   "d00e6fd"
upstream:
  origin:   "git://github.com/gfldex/perl6-typesafe-xhtml-writer.git"
  branch:   "master"
  commit:   "d00e6fd"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/gfldex/perl6-typesafe-xhtml-writer/Makefile
+++ b/gfldex/perl6-typesafe-xhtml-writer/Makefile
@@ -1,18 +1,22 @@
+LIB-PATH=-I . -I ./lib/ -I ../perl6-typesafe-html/lib/
+
 lib/Typesafe/XHTML/Writer.pm6: bin/generate-function-definition.p6 Build.pm
-	perl6 -I . -M Build -e 'Build.new.build(".")'
+	perl6 $(LIB-PATH) -M Build -e 'Build.new.build(".")'
 
 bin/benchmark.p6: bin/generate-benchmark.p6
-	perl6 -I ./lib $< > $@
+	perl6 $(LIB-PATH) $< > $@
 
-TESTS=t/basic.t t/skeleton.t
+TESTS=t/basic.t t/skeleton.t t/parametric.t
 
 $(TESTS): lib/Typesafe/XHTML/Writer.pm6
 
-benchmark: bin/benchmark.p6
-	perl6 -I ./lib $< > /dev/null
+benchmark: bin/benchmark.p6 bin/benchmark-parameterised.p6 bin/benchmark-noindent.p6
+	perl6 $(LIB-PATH) bin/benchmark.p6 > /dev/null
+	perl6 $(LIB-PATH) bin/benchmark-parameterised.p6 > /dev/null
+	perl6 $(LIB-PATH) bin/benchmark-noindent.p6 > /dev/null
 
-test: t/basic.t
-	prove --exec "perl6 -I ./lib" -r ./t/
+test: $(TESTS)
+	prove -v --exec "perl6 $(LIB-PATH)" -r ./t/
 
 lib: lib/Typesafe/XHTML/Writer.pm6
 
