--- a/peelle/Finance-CompoundInterest/.travis.yml
+++ b/peelle/Finance-CompoundInterest/.travis.yml
@@ -1,5 +1,7 @@
----
 sudo: false
-language: perl6
-perl6:
-  - latest
+language: perl6 
+perl6: 
+    - latest
+notifications: 
+    email: 
+        - developer@peelle.org
