--- a/awwaiid/p6-Inline-Ruby/Makefile.in
+++ b/awwaiid/p6-Inline-Ruby/Makefile.in
@@ -6,15 +6,10 @@ clean:
 	rm %DESTDIR%/resources/libraries/%rbhelper%
 
 %DESTDIR%/resources/libraries/%rbhelper%: rbhelper.c
-	# This will use pkg-config to try finding ruby
-	# looks for 2.3, 2.2, 2.1, 2.0
-	gcc -Wall rbhelper.c \
-	  `pkg-config --libs --cflags ruby-2.3 2>/dev/null \
-	  || pkg-config --libs --cflags ruby-2.2 2>/dev/null \
-	  || pkg-config --libs --cflags ruby-2.1 2>/dev/null \
-	  || pkg-config --libs --cflags ruby-2.0 2>/dev/null \
-	  || pkg-config --libs --cflags ruby-1.9` \
-	  -shared -o %DESTDIR%/resources/libraries/%rbhelper% -fPIC -g
+	gcc -Wall -shared -fPIC -g \
+		rbhelper.c \
+		%rb-gcc-args% \
+		-o %DESTDIR%/resources/libraries/%rbhelper%
 
 test: all
 	prove -e 'perl6 -Ilib' t
