git subrepo clone --force git://github.com/atweiden/mktxn.git atweiden/mktxn
subrepo:
  subdir:   "atweiden/mktxn"
  merged:   "f1a83c0"
upstream:
  origin:   "git://github.com/atweiden/mktxn.git"
  branch:   "master"
  commit:   "f1a83c0"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/atweiden/mktxn/.travis.yml
+++ b/atweiden/mktxn/.travis.yml
@@ -10,6 +10,9 @@ perl6:
 # sudo required for libxxhash installation
 sudo: required
 
+env:
+  - PATH=~/.rakudobrew/bin:~/.rakudobrew/moar-nom/install/share/perl6/site/bin:~/.rakudobrew/moar-nom/panda/bin:$PATH
+
 before_install:
   # install libxxhash into /usr/lib/libxxhash.so
   - curl https://codeload.github.com/Cyan4973/{xxHash}/{tar.gz}/{r42} -o "#1-#3.#2"
@@ -23,5 +26,5 @@ before_install:
   - cd $TRAVIS_BUILD_DIR
 
 install:
-  - rakudobrew build-panda
+  - rakudobrew build panda
   - panda --notests installdeps .
