git subrepo clone --force git://github.com/goneri/p6-Email-Notmuch.git goneri/p6-Email-Notmuch
subrepo:
  subdir:   "goneri/p6-Email-Notmuch"
  merged:   "6a4e6b2"
upstream:
  origin:   "git://github.com/goneri/p6-Email-Notmuch.git"
  branch:   "master"
  commit:   "6a4e6b2"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/goneri/p6-Email-Notmuch/.travis.yml
+++ b/goneri/p6-Email-Notmuch/.travis.yml
@@ -2,12 +2,13 @@ branches:
   except:
     - gh-pages
 language: perl6
-sudo: required
+addons:
+  apt:
+    packages:
+    - libnotmuch-dev
 perl6:
   - latest
-before_install:
-  - sudo apt-get update -q
-  - sudo apt-get install -y libnotmuch4
 install:
   - rakudobrew build-panda
+  - export PATH=~/.rakudobrew/bin:~/.rakudobrew/moar-nom/install/share/perl6/site/bin:~/.rakudobrew/moar-nom/panda/bin:$PATH
   - panda installdeps .
