git subrepo clone --force git://github.com/ugexe/zef.git ugexe/zef
subrepo:
  subdir:   "ugexe/zef"
  merged:   "3eacd46"
upstream:
  origin:   "git://github.com/ugexe/zef.git"
  branch:   "master"
  commit:   "3eacd46"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/ugexe/zef/resources/config.json
+++ b/ugexe/zef/resources/config.json
@@ -7,12 +7,14 @@
     "ContentStorage" : [
         { 
             "name" : "cached",
+            "enabled" : 1,
             "module" : "Zef::ContentStorage::LocalCache",
             "default" : 1,
             "options" : { }
         },
         {
             "name" : "p6c",
+            "enabled" : 1,
             "module" : "Zef::ContentStorage::P6C",
             "default" : 1,
             "options" : {
@@ -25,10 +27,10 @@
         },
         {
             "name" : "cpan",
+            "enabled" : 0,
             "module" : "Zef::ContentStorage::CPAN",
-            "disabled" : 1,
             "options" : {
-                "mirrors" : ["https://api.metacpan.org/v0/release/"]
+                "mirrors" : ["http://hack.p6c.org:5000/v0/release/"]
             }
         }
     ],
@@ -51,6 +53,11 @@
         }
     ],
     "Extract" : [
+        {
+            "name" : "git",
+            "module" : "Zef::Shell::git",
+            "comment" : "used to checkout (extract) specific tags/sha1/commit/branch from a git repo"
+        },
         {
             "name" : "unzip",
             "module" : "Zef::Shell::unzip"
