git subrepo clone --force git://github.com/sergot/openssl.git sergot/openssl
subrepo:
  subdir:   "sergot/openssl"
  merged:   "03076a2"
upstream:
  origin:   "git://github.com/sergot/openssl.git"
  branch:   "master"
  commit:   "03076a2"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/sergot/openssl/.travis.yml
+++ b/sergot/openssl/.travis.yml
@@ -3,8 +3,7 @@ perl6:
   - latest
 install:
   - rakudobrew build-panda
-  - panda --notests installdeps .
+  - panda installdeps .
 script:
-  - perl6 -MPanda::Builder -e 'Panda::Builder.build($*CWD)'
-  - PERL6LIB=$PWD/blib/lib prove -e perl6 -r t/
+  - prove -v -e 'perl6 -Ilib' t/
 sudo: false
