--- a/perl6/DBIish/.travis.yml
+++ b/perl6/DBIish/.travis.yml
@@ -6,14 +6,14 @@ language: perl6
 
 perl6:
     - latest
-
+sudo: false
+install:
+    - rakudobrew build-panda
+    - panda install .
 before_install:
     # mysql
-    - mysql -e "CREATE DATABASE zavolaj;" -uroot
+    - mysql -e "CREATE DATABASE dbdishtest;" -uroot
     - mysql -e "CREATE USER 'testuser'@'localhost' IDENTIFIED BY 'testpass';" -uroot
-    - mysql -e "GRANT ALL PRIVILEGES ON zavolaj.* TO 'testuser'@'localhost';" -uroot
+    - mysql -e "GRANT ALL PRIVILEGES ON dbdishtest.* TO 'testuser'@'localhost';" -uroot
     # Pg
-    - psql -c 'create database travis_ci_test;' -U postgres
-    - export PGDATABASE=travis_ci_test
-    - export PGUSER=postgres
-
+    - psql -c 'CREATE DATABASE dbdishtest;' -U postgres
