git subrepo clone --force git://github.com/azawawi/perl6-electron.git azawawi/perl6-electron
subrepo:
  subdir:   "azawawi/perl6-electron"
  merged:   "174c77c"
upstream:
  origin:   "git://github.com/azawawi/perl6-electron.git"
  branch:   "master"
  commit:   "174c77c"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/azawawi/perl6-electron/.travis.yml
+++ b/azawawi/perl6-electron/.travis.yml
@@ -1,7 +1,18 @@
+sudo: required
+
 language: perl6
+
+os:
+  - linux
+  - osx
+
 perl6:
-    - latest
+  - 2016.01
+  - latest
 
 install:
-    - rakudobrew build-panda
-    - panda update && panda install File::Which JSON::RPC
+  - echo $TRAVIS_OS_NAME
+  - rakudobrew build panda
+  - panda installdeps .
+
+script: prove -v -e perl6 t/
