git subrepo clone --force git://github.com/paultcochrane/Perl6Mongers-Hannover.git paultcochrane/Perl6Mongers-Hannover
subrepo:
  subdir:   "paultcochrane/Perl6Mongers-Hannover"
  merged:   "332d3bf"
upstream:
  origin:   "git://github.com/paultcochrane/Perl6Mongers-Hannover.git"
  branch:   "master"
  commit:   "332d3bf"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/paultcochrane/Perl6Mongers-Hannover/.travis.yml
+++ b/paultcochrane/Perl6Mongers-Hannover/.travis.yml
@@ -1,12 +1,19 @@
 language: perl6
 
 perl6:
-    - 2015.06
-    - 2015.05
+    - latest
+    - 2016.02
+    - 2016.01
+    - 2015.12
+    - 2015.11
+    - "2015.10"
+    - 2015.09
 
 install:
-    - rakudobrew build-panda
-    - panda install IO::Capture::Simple
+    rakudobrew build-panda $([ "$TRAVIS_PERL6_VERSION" == "latest" ] && echo "" || echo $TRAVIS_PERL6_VERSION)
+
+before_script:
+    panda install IO::Capture::Simple
 
 script:
-    - panda-test
+    panda-test
