git subrepo clone --force git://github.com/sylvarant/Compress-Brotli.git sylvarant/Compress-Brotli
subrepo:
  subdir:   "sylvarant/Compress-Brotli"
  merged:   "a18c543"
upstream:
  origin:   "git://github.com/sylvarant/Compress-Brotli.git"
  branch:   "master"
  commit:   "a18c543"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/sylvarant/Compress-Brotli/.travis.yml
+++ b/sylvarant/Compress-Brotli/.travis.yml
@@ -10,5 +10,5 @@ install:
     - rakudobrew build-panda
     - panda --force install LibraryMake
 
-script: panda-build && prove -e perl6 t
+script: (cd stub; make) && prove -e perl6 t
 
