--- a/atweiden/mktxn/.travis.yml
+++ b/atweiden/mktxn/.travis.yml
@@ -15,9 +15,9 @@ env:
 
 before_install:
   # install libxxhash into /usr/lib/libxxhash.so
-  - curl https://codeload.github.com/Cyan4973/{xxHash}/{tar.gz}/{r42} -o "#1-#3.#2"
-  - tar xvzf xxHash-r42.tar.gz
-  - cd xxHash-r42
+  - curl https://codeload.github.com/Cyan4973/{xxHash}/{tar.gz}/{v0.5.1} -o "#1-#3.#2"
+  - tar xvzf xxHash-v0.5.1.tar.gz
+  - cd xxHash-0.5.1
   - mkdir build && pushd build
   - cmake -DCMAKE_INSTALL_PREFIX=/usr ../cmake_unofficial/
   - make all
