--- a/ugexe/Perl6-Net--HTTP/.appveyor.yml
+++ b/ugexe/Perl6-Net--HTTP/.appveyor.yml
@@ -16,6 +16,6 @@ install:
 build: off
 
 test_script:
-  - prove -v -e "perl6 -Ilib" t/
+  - prove -v -e "perl6 -Ilib" t/ xt/
 
 shallow_clone: true
